<resources>
    <string name="app_name">id3FaceRecognitionSample-Java</string>
    <string name="start_capture_button_label">Start Capture</string>
    <string name="stop_capture_button_label">Stop Capture</string>
    <string name="enroll_button_label">Enroll</string>
    <string name="match_button_label">Match</string>
    <string name="enrolled_face_image_view_description">Displays the enrolled face to match</string>
    <string name="decision_text_view_placeholder">Score: \nDecision @FMR10000:</string>
    <string name="quality_text_view_placeholder">Quality:</string>
    <string name="quality_text_view_value">Quality: %1$d</string>
    <string name="quality_text_view_warning">Quality: %1$d: Warning, the quality is low</string>
</resources>
