<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cameraFragment"
        android:name="eu.id3.face.samples.recognitionjava.CameraFragment"
        android:layout_width="192dp"
        android:layout_height="256dp"
        android:layout_marginTop="24dp"
        android:tag="camerafrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_camera" />

    <TextView
        android:id="@+id/qualityMatchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quality_text_view_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraFragment" />

    <Button
        android:id="@+id/startCaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="360dp"
        android:maxHeight="40dp"
        android:text="@string/start_capture_button_label"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/enrollButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qualityMatchTextView"/>


    <Button
        android:id="@+id/enrollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll_button_label"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/matchButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startCaptureButton"
        app:layout_constraintTop_toBottomOf="@+id/qualityMatchTextView"
        app:layout_constraintVertical_bias="0.569" />


    <Button
        android:id="@+id/matchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_button_label"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/enrollButton"
        app:layout_constraintTop_toBottomOf="@+id/qualityMatchTextView"
        app:layout_constraintVertical_bias="0.569" />


    <ImageView
        android:id="@+id/enrolledFaceImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/enrolled_face_image_view_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrollButton"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/qualityEnrolledTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quality_text_view_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrolledFaceImageView" />

    <TextView
        android:id="@+id/decisionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/decision_text_view_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qualityEnrolledTextView"
        app:layout_constraintVertical_bias="0.356" />

</androidx.constraintlayout.widget.ConstraintLayout>
